objects/AcctSeed__Bank_Reconciliation_Line__c.object
<CustomObject>
    <description>The object has been deprecated and is no longer used.</description>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting  Period</label>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipName>Bank_Reconciliation_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Reconciliation__c</fullName>
        <label>Bank Reconciliation</label>
        <referenceTo>AcctSeed__Bank_Reconciliation__c</referenceTo>
        <relationshipName>Bank_Reconciliation_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>AcctSeed__Transaction__c</referenceTo>
        <relationshipName>Bank_Reconciliation_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <formula>IF( AcctSeed__Amount__c &lt;=0, &quot;Outstanding Disbursement&quot;, &quot;Outstanding Deposit&quot;)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>zDep-Bank Reconciliation Line</label>
    <nameField>
        <displayFormat>BankRecLine-{000000000}</displayFormat>
        <label>zDeprecated Bank Rec Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Reconciliation Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>